# openleaf

./: .gitignore  LICENSE  README.md  claude.md  config.yaml  main.py  pyproject.toml  quickstart.md  requirements.txt  start.sh  stop.sh  test_connection.py  viewer.html
configs/: leaf_2013_24kwh.yaml  leaf_2018_40kwh.yaml  leaf_ble_template.yaml  playback_example.yaml  serial_usb_example.yaml  synthetic.yaml
docs/: ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PID_STRATEGY.md  REQUIREMENTS.md  SYSTEM_ARCHITECTURE.md  architecture.md  high_level_design.md  implementation_log.md  implementation_status.md  pid_strategy.md  requirements.md  system_architecture.md
docs/ref/: can_analysis_2013_leaf.md  intialscan.csv  leaf_can_obd_summary.md  leaf_generations.md
openleaf/: __init__.py  config.py  server.py  state.py
openleaf/logging/: __init__.py  recorder.py  setup.py
openleaf/transports/: __init__.py  base.py  ble.py  elm327.py  obd.py  obd2_unified.py  playback.py  synthetic.py
openleaf/transports/connections/: __init__.py  base.py  ble.py  serial.py
openleaf/ui/kivy/: main.py  ui.kv
openleaf/ui/kivy/services/: api.py
openleaf/ui/kivy/widgets/: cell_graph.py  gauge.py  metric.py
pids/: leaf.yaml  leaf_aze0.yaml  leaf_ze0.yaml  leaf_ze1.yaml
scripts/: ble_scan.py  capture_passive_can.py  decode_real_can_data.py  parse_passive_can.py  readme_passive_can.md
tests/: test_ble_transport.py  test_config.py  test_obd_transport.py  test_server_basic.py  test_state.py  test_synthetic_transport.py
