[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "openleaf"
version = "0.1.0"
description = "Hardware-agnostic telemetry engine for the Nissan Leaf"
readme = "README.md"
authors = [
  { name = "OpenLeaf Contributors" }
]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "ruff>=0.4",
  "mypy>=1.8",
  "pytest>=8.1",
  "httpx>=0.27"
]
ui = [
  "kivy>=2.2",
  "httpx>=0.27"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]

[tool.ruff.isort]
known-first-party = ["openleaf"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
packages = ["openleaf"]
strict_optional = true
warn_unused_configs = true
